--- a/html_exercise/index.html
+++ b/html_exercise/index.html
@@ -5,37 +5,13 @@
     <title>Hello, world!</title>
   </head>
     <body> 
-           <header>
-            <nav>
-                <ul>
-                  <li>Home</li>
-                  <li>About</li>
-                  <li>Contact</li>
-                </ul>
-              </nav>
-        </header>
-    <main>
-        <article>
-            <section>
-                <h1>Help</h1>
-                <p>tabangi</p>
-            </section>
-           <section>
-                <h1>boultes</h1>
-                <p>nahadasd</p>
-           </section>
-        </article>
-           <aside>
-            <ul style="list-style-type: armenian;">
-              <li>yes</li>
-              <li>yes</li>
-              <li>yes</li>
-            </ul>
-          </aside>
-    </main>
-    <footer>
-        <p>made by the french man</p>
-      </footer>
+           <p>Piper <strong>Piper</strong>!</p>
+           <p>Piper <em>Piper</em>!</p>
+           <p>Piper <sup>Piper</sup>!</p>
+           <p>Piper <sub>Piper</sub>!</p>
+           <p>Piper <span>Piper</span>!</p>
+          
+           
  
   </body>
 </html>
